--- a/icon_array.html
+++ b/icon_array.html
@@ -1,3 +1,8 @@
+<style>
+  .container{margin-top: 20px;} 
+  .rChart{height: 500px;}
+</style>
+
 <div class='container' ng-controller="DemoCtrl">
   <div class='row'>
     <div class='col-md-3'>
